# Ecommerce-Core-Concept

fastapi_db/fastapi_db/: .env  pyproject.toml
fastapi_db/fastapi_db/backend/: auth.py  db.py  depend.py  main.py  model.py  settings.py
fastapi_db/fastapi_db/backend/router/: user.py
my-app/: .env  package.json  pnpm-lock.yaml  tsconfig.json
my-app/sanity/: schema.ts
my-app/sanity/schemas/: product.ts  title.ts
my-app/src/: middleware.ts
my-app/src/app/: layout.tsx  page.tsx  provider.tsx  types.d.ts
my-app/src/app/api/test/: route.ts
my-app/src/app/auth/login/: page.tsx
my-app/src/app/auth/register/: page.tsx
my-app/src/app/order/: page.tsx
my-app/src/app/search/: page.tsx
my-app/src/app/shop/: page.tsx
my-app/src/app/store/: hooks.ts  store.ts
my-app/src/app/store/features/: authSlice.ts  searchSlice.ts
my-app/src/app/user/profile/: page.tsx
my-app/src/app/user/settings/: page.tsx
my-app/src/components/: Display.tsx  Nav.tsx  NavLink.tsx  Navbar.tsx
my-app/src/components/forms/: Alert.tsx  LoginForm.tsx  SignUp.tsx
my-app/src/lib/: data.ts
